--- a/confirmacao.html
+++ b/confirmacao.html
@@ -24,6 +24,11 @@
       backdrop-filter: blur(10px);
       animation: fadeIn 1s ease;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 
 </head>
