--- a/index.html
+++ b/index.html
@@ -1,58 +1,62 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <title>Quiz da Doutora</title>
+<!-- ===================== PERGUNTAS FREQUENTES ===================== -->
+<section id="faq" style="margin-top: 40px;">
+    <h2>Perguntas/Dúvidas Frequentes</h2>
+    <div class="pergunta-faq">
+        <p><strong>Dói?</strong></p>
+        <label><input type="radio" name="faq_doi" value="Sim"> Sim</label>
+        <label><input type="radio" name="faq_doi" value="Não"> Não</label>
+    </div>
+    <div class="pergunta-faq">
+        <p><strong>Quanto tempo dura?</strong></p>
+        <label><input type="radio" name="faq_tempo" value="Sim"> Sim</label>
+        <label><input type="radio" name="faq_tempo" value="Não"> Não</label>
+    </div>
+    <div class="pergunta-faq">
+        <p><strong>Quando posso treinar?</strong></p>
+        <label><input type="radio" name="faq_treino" value="Sim"> Sim</label>
+        <label><input type="radio" name="faq_treino" value="Não"> Não</label>
+    </div>
+    <div class="pergunta-faq">
+        <p><strong>Quando vejo o resultado final?</strong></p>
+        <label><input type="radio" name="faq_resultado" value="Sim"> Sim</label>
+        <label><input type="radio" name="faq_resultado" value="Não"> Não</label>
+    </div>
+    <div class="pergunta-faq">
+        <p><strong>Posso tomar bebida alcoólica?</strong></p>
+        <label><input type="radio" name="faq_alcool" value="Sim"> Sim</label>
+        <label><input type="radio" name="faq_alcool" value="Não"> Não</label>
+    </div>
+    <div class="pergunta-faq">
+        <p><strong>Posso viajar depois?</strong></p>
+        <label><input type="radio" name="faq_viagem" value="Sim"> Sim</label>
+        <label><input type="radio" name="faq_viagem" value="Não"> Não</label>
+    </div>
+</section>
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            max-width: 600px;
-            margin: auto;
-            background: #f5f5f5;
-        }
+<!-- ===================== INFORMAÇÕES DA PROFISSIONAL ===================== -->
+<section id="profissional" style="margin-top: 40px;">
+    <h2>Informações sobre a Profissional</h2>
+    <ul>
+        <li><strong>Nome:</strong> Dra. Dani Rafaela</li>
+        <li><strong>Formação:</strong></li>
+        <li><strong>Especializações:</strong></li>
+        <li><strong>Anos de experiência:</strong></li>
+    </ul>
+</section>
 
-        h2 {
-            text-align: center;
-            color: #333;
-        }
-
-        .pergunta {
-            background: white;
-            padding: 15px;
-            margin-bottom: 15px;
-            border-radius: 10px;
-            box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-        }
-
-        label {
-            display: block;
-            margin-top: 8px;
-            font-size: 16px;
-        }
-
-        button {
-            width: 100%;
-            padding: 15px;
-            font-size: 18px;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-    </style>
-</head>
-
-<body>
-
-    <h2>Quiz — Procedimentos da Doutora</h2>
-    <div id="quiz-container"></div>
-
-    <button id="enviar">Enviar Respostas</button>
-
-    <script src="script.js"></script>
-</body>
-</html>
+<!-- ===================== DADOS DAS CLÍNICAS ===================== -->
+<section id="clinicas" style="margin-top: 40px;">
+    <h2>Dados das Clínicas/Consultórios</h2>
+    <ul>
+        <li><strong>Endereço:</strong></li>
+        <li><strong>Horário de funcionamento:</strong></li>
+        <li><strong>Dias de funcionamento:</strong></li>
+        <li><strong>Dias de atendimento em Prudente:</strong></li>
+        <li><strong>Dias de atendimento em Dracena:</strong></li>
+        <li><strong>Forma de agendamento:</strong></li>
+        <li><strong>Políticas de cancelamento:</strong></li>
+        <li><strong>Formas de pagamento:</strong></li>
+        <li><strong>Políticas de agendamento:</strong></li>
+        <li><strong>Políticas de avaliação:</strong></li>
+    </ul>
+</section>
