--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!DOCTYPE html> <html lang="pt-BR"> <head> <meta charset="UTF-8"> <title>Quiz da Doutora</title> <style> body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; background: #f5f5f5; } h2 { text-align: center; color: #333; } .pergunta { background: white; padding: 15px; margin-bottom: 15px; border-radius: 10px; box-shadow: 0 3px 8px rgba(0,0,0,0.1); } label { display: block; margin-top: 8px; font-size: 16px; } button { width: 100%; padding: 15px; font-size: 18px; background: #4CAF50; color: white; border: none; border-radius: 10px; cursor: pointer; margin-top: 20px; } </style> </head> <body> <h2>Quiz — Procedimentos da Doutora</h2> <div id="quiz-container"></div> <button id="enviar">Enviar Respostas</button> <script src="script.js"></script> </body> </html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Respostas enviadas!</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #6b8cff, #88e1f2);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .box {
+      background: rgba(255,255,255,0.15);
+      padding: 40px;
+      border-radius: 15px;
+      backdrop-filter: blur(10px);
+      animation: fadeIn 1s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
+
+</head>
+<body>
+  <div class="box">
+    <h1>Respostas enviadas com sucesso! 🎉</h1>
+    <p>Obrigado por preencher o quiz.</p>
+  </div>
+</body>
+</html>
