--- a/index.html
+++ b/index.html
@@ -1,154 +1,160 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Quiz da Doutora</title>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            max-width: 700px;
-            margin: auto;
-            background: #f5f5f5;
-        }
-
-        h2 {
-            text-align: center;
-            color: #333;
-        }
-
-        .pergunta {
-            background: white;
-            padding: 15px;
-            margin-bottom: 15px;
-            border-radius: 10px;
-            box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-        }
-
-        label {
-            display: block;
-            margin-top: 8px;
-            font-size: 16px;
-        }
-
-        button {
-            width: 100%;
-            padding: 15px;
-            font-size: 18px;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-
-        section {
-            margin-top: 40px;
-        }
-
-        section h2 {
-            color: #4CAF50;
-            margin-bottom: 15px;
-        }
-
-        .pergunta-faq {
-            background: #fff;
-            padding: 15px;
-            margin-bottom: 10px;
-            border-radius: 10px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-        }
-
-        .pergunta-faq label {
-            display: inline-block;
-            margin-right: 15px;
-            font-size: 15px;
-        }
-
-        ul {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        ul li {
-            margin-bottom: 5px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Quiz da Doutora</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      max-width: 700px;
+      margin: auto;
+      background: #f5f5f5;
+    }
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+    .pergunta, .pergunta-faq {
+      background: white;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+    }
+    label {
+      display: block;
+      margin-top: 8px;
+      font-size: 16px;
+    }
+    input[type="text"], input[type="number"], textarea {
+      width: 100%;
+      padding: 8px;
+      font-size: 14px;
+      margin-top: 5px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+    button {
+      width: 100%;
+      padding: 15px;
+      font-size: 18px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    section {
+      margin-top: 40px;
+    }
+    section h2 {
+      color: #4CAF50;
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
-
 <body>
 
-    <h2>Quiz — Procedimentos da Doutora</h2>
-    <div id="quiz-container"></div>
+<h2>Quiz — Procedimentos da Doutora</h2>
+<div id="quiz-container"></div>
 
-    <button id="enviar">Enviar Respostas</button>
+<section id="faq">
+  <h2>Perguntas/Dúvidas Frequentes</h2>
+  <div class="pergunta-faq">
+    <label>Dói?</label>
+    <input type="text" name="faq_doi" placeholder="Responda SIM ou NÃO">
+  </div>
+  <div class="pergunta-faq">
+    <label>Quanto tempo dura?</label>
+    <input type="text" name="faq_duracao" placeholder="Responda">
+  </div>
+  <div class="pergunta-faq">
+    <label>Quando posso treinar?</label>
+    <input type="text" name="faq_treino" placeholder="Responda">
+  </div>
+  <div class="pergunta-faq">
+    <label>Quando vejo o resultado final?</label>
+    <input type="text" name="faq_resultado" placeholder="Responda">
+  </div>
+  <div class="pergunta-faq">
+    <label>Posso tomar bebida alcoólica?</label>
+    <input type="text" name="faq_bebida" placeholder="Responda">
+  </div>
+  <div class="pergunta-faq">
+    <label>Posso viajar depois?</label>
+    <input type="text" name="faq_viagem" placeholder="Responda">
+  </div>
+</section>
 
- <section id="profissional">
-    <h2>Informações sobre a Profissional</h2>
-    <div class="pergunta">
-        <label>Nome:</label>
-        <input type="text" name="prof_nome" placeholder="Digite seu nome">
-    </div>
-    <div class="pergunta">
-        <label>Formação:</label>
-        <input type="text" name="prof_formacao" placeholder="Digite sua formação">
-    </div>
-    <div class="pergunta">
-        <label>Especializações:</label>
-        <input type="text" name="prof_especializacoes" placeholder="Digite suas especializações">
-    </div>
-    <div class="pergunta">
-        <label>Anos de experiência:</label>
-        <input type="number" name="prof_anos" placeholder="Digite os anos de experiência">
-    </div>
+<section id="profissional">
+  <h2>Informações sobre a Profissional</h2>
+  <div class="pergunta">
+    <label>Nome:</label>
+    <input type="text" name="prof_nome" placeholder="Digite seu nome">
+  </div>
+  <div class="pergunta">
+    <label>Formação:</label>
+    <input type="text" name="prof_formacao" placeholder="Digite sua formação">
+  </div>
+  <div class="pergunta">
+    <label>Especializações:</label>
+    <input type="text" name="prof_especializacoes" placeholder="Digite suas especializações">
+  </div>
+  <div class="pergunta">
+    <label>Anos de experiência:</label>
+    <input type="number" name="prof_anos" placeholder="Digite os anos de experiência">
+  </div>
 </section>
 
 <section id="clinicas">
-    <h2>Dados das Clínicas/Consultórios</h2>
-    <div class="pergunta">
-        <label>Endereço:</label>
-        <input type="text" name="clin_endereco" placeholder="Digite o endereço">
-    </div>
-    <div class="pergunta">
-        <label>Horário de funcionamento:</label>
-        <input type="text" name="clin_horario" placeholder="Digite o horário">
-    </div>
-    <div class="pergunta">
-        <label>Dias de funcionamento:</label>
-        <input type="text" name="clin_dias" placeholder="Digite os dias de funcionamento">
-    </div>
-    <div class="pergunta">
-        <label>Dias de atendimento em Prudente:</label>
-        <input type="text" name="clin_prudente" placeholder="Digite os dias">
-    </div>
-    <div class="pergunta">
-        <label>Dias de atendimento em Dracena:</label>
-        <input type="text" name="clin_dracena" placeholder="Digite os dias">
-    </div>
-    <div class="pergunta">
-        <label>Forma de agendamento:</label>
-        <input type="text" name="clin_agendamento" placeholder="Ex: WhatsApp / Telefone">
-    </div>
-    <div class="pergunta">
-        <label>Políticas de cancelamento:</label>
-        <input type="text" name="clin_cancelamento" placeholder="Digite as políticas">
-    </div>
-    <div class="pergunta">
-        <label>Formas de pagamento:</label>
-        <input type="text" name="clin_pagamento" placeholder="Ex: Cartão, Pix, Dinheiro">
-    </div>
-    <div class="pergunta">
-        <label>Políticas de agendamento:</label>
-        <input type="text" name="clin_politicas_agendamento" placeholder="Digite as políticas">
-    </div>
-    <div class="pergunta">
-        <label>Políticas de avaliação:</label>
-        <input type="text" name="clin_politicas_avaliacao" placeholder="Digite as políticas">
-    </div>
+  <h2>Dados das Clínicas/Consultórios</h2>
+  <div class="pergunta">
+    <label>Endereço:</label>
+    <input type="text" name="clin_endereco" placeholder="Digite o endereço">
+  </div>
+  <div class="pergunta">
+    <label>Horário de funcionamento:</label>
+    <input type="text" name="clin_horario" placeholder="Digite o horário">
+  </div>
+  <div class="pergunta">
+    <label>Dias de funcionamento:</label>
+    <input type="text" name="clin_dias" placeholder="Digite os dias de funcionamento">
+  </div>
+  <div class="pergunta">
+    <label>Dias de atendimento em Prudente:</label>
+    <input type="text" name="clin_prudente" placeholder="Digite os dias">
+  </div>
+  <div class="pergunta">
+    <label>Dias de atendimento em Dracena:</label>
+    <input type="text" name="clin_dracena" placeholder="Digite os dias">
+  </div>
+  <div class="pergunta">
+    <label>Forma de agendamento:</label>
+    <input type="text" name="clin_agendamento" placeholder="Ex: WhatsApp / Telefone">
+  </div>
+  <div class="pergunta">
+    <label>Políticas de cancelamento:</label>
+    <input type="text" name="clin_cancelamento" placeholder="Digite as políticas">
+  </div>
+  <div class="pergunta">
+    <label>Formas de pagamento:</label>
+    <input type="text" name="clin_pagamento" placeholder="Ex: Cartão, Pix, Dinheiro">
+  </div>
+  <div class="pergunta">
+    <label>Políticas de agendamento:</label>
+    <input type="text" name="clin_politicas_agendamento" placeholder="Digite as políticas">
+  </div>
+  <div class="pergunta">
+    <label>Políticas de avaliação:</label>
+    <input type="text" name="clin_politicas_avaliacao" placeholder="Digite as políticas">
+  </div>
 </section>
 
-    <script src="script.js"></script>
+<button id="enviar">Enviar Respostas</button>
+
+<script src="script.js"></script>
 </body>
 </html>
