--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       padding: 20px;
       max-width: 700px;
       margin: auto;
-      background: #f5f5f5;
+      background: linear-gradient(135deg, #6b8cff, #88e1f2);
     }
     h2 {
       text-align: center;
